--- a/interact.qmd
+++ b/interact.qmd
@@ -15,13 +15,20 @@ Elisabetta Pietrostefani
 
 ## Lecture
 
-Slides can be downloaded [here](https://github.com/GDSL-UL/wma/raw/main/pdf/lecture_07.pdf)
+Slides can be downloaded
+[here](https://github.com/GDSL-UL/wma/raw/main/pdf/lecture_07.pdf)
 
 ## Lab
 
-In this lab, we are going to get our hands dirty and play with different elements that allow us to make a map interactive. We will do so using Kepler/gl, which makes possible (and even fun!) to work interactivity into a map in different ways.
+In this lab, we are going to get our hands dirty and play with different
+elements that allow us to make a map interactive. We will do so using
+Kepler/gl, which makes possible (and even fun!) to work interactivity
+into a map in different ways.
 
-As we go through the hands-on aspect of this block, please keep the lecture slides handy and revisit them as much as you need to. As always, the real challenge is not to learn how to use a piece of software, but how to apply conceptual notions in a practical context.
+As we go through the hands-on aspect of this block, please keep the
+lecture slides handy and revisit them as much as you need to. As always,
+the real challenge is not to learn how to use a piece of software, but
+how to apply conceptual notions in a practical context.
 
 To complete this lab, you will require the following:
 
@@ -30,7 +37,8 @@ To complete this lab, you will require the following:
 
 ### Getting to know Kepler.gl
 
-We will use Kepler to quickly be able to make web maps and explore how you can build interactivity in web maps.
+We will use Kepler to quickly be able to make web maps and explore how
+you can build interactivity in web maps.
 
 Let us start by open up [Kepler.gl](https://kepler.gl/)
 
@@ -38,13 +46,19 @@ You should see a dashboard that looks more or less like:
 
 ![](./img/kepler1.png){width="80%"}
 
-To start understaning the main features, you can create a "New Map" (either from the dasboard or the "Maps" section, you will be able to find that button), and add the imd2019 dataset we used for Lab 6 (remember, you will find it on the "Shared with you" tab). This will take you to a new page that looks roughly like:
+To start understaning the main features, you can create a "New Map"
+(either from the dasboard or the "Maps" section, you will be able to
+find that button), and add the imd2019 dataset we used for Lab 6
+(remember, you will find it on the "Shared with you" tab). This will
+take you to a new page that looks roughly like:
 
-We will use some density data you can download [here](https://github.com/GDSL-UL/wma/raw/main/data/liverpool_density.geojson.zip)
+We will use some density data you can download
+[here](https://github.com/GDSL-UL/wma/raw/main/data/liverpool_density.geojson.zip)
 
 ![](./img/kepler_adddata.png){width="80%"}
 
-Once the dataset has been uploaded, it shows under Layers on the left-hand side panel.
+Once the dataset has been uploaded, it shows under Layers on the
+left-hand side panel.
 
 ![](./img/liverpool_kepler.png){width="80%"}
 
@@ -64,11 +78,14 @@ Let's walk through the basics of Kepler.gl as a (web) GIS:
 
     -   LEGEND
 
-There is lots of documentation to help you [here](https://docs.kepler.gl/docs).
+There is lots of documentation to help you
+[here](https://docs.kepler.gl/docs).
 
 ### Interactivity
 
-Now let's remember the building blocks of interactivity we have learnt in the lecture. We will demonstrate in bold those that we will work through in the lab:
+Now let's remember the building blocks of interactivity we have learnt
+in the lecture. We will demonstrate in bold those that we will work
+through in the lab:
 
 -   Filtering
 
@@ -88,17 +105,22 @@ Now let's remember the building blocks of interactivity we have learnt in the le
 
 -   **Animate**
 
-To demonstrate animations, we will use another dataset we have enountered in the past, the CLIWOC ship logs:
+To demonstrate animations, we will use another dataset we have
+enountered in the past, the CLIWOC ship logs:
 
 [`https://figshare.com/articles/CLIWOC_Slim_and_Routes/11941224`](https://figshare.com/articles/CLIWOC_Slim_and_Routes/11941224)
 
-We will work with individual logs (cliwoc_slim) to create an animation of the logs, for example just showing expeditions between certain date, as in this example of expeditions into the Caribbean.
+We will work with individual logs (cliwoc_slim) to create an animation
+of the logs, for example just showing expeditions between certain date,
+as in this example of expeditions into the Caribbean.
 
 ![](./img/animate.png){width="80%" height="80%"}
 
 **Date Prep**
 
-First we need the data in a geojson format and to make sure that the time variable is in the correct date-time format. For this we will need to rely on QGIS or R.
+First we need the data in a geojson format and to make sure that the
+time variable is in the correct date-time format. For this we will need
+to rely on QGIS or R.
 
 In QGIS there are two steps:
 
@@ -106,7 +128,8 @@ In QGIS there are two steps:
 
 ![](./img/save_geojson.png){width="80%"}
 
-2.  Change the date variable to a date and time variable. If you don't do this, kepler.gl won't recognize it as a date.
+2.  Change the date variable to a date and time variable. If you don't
+    do this, kepler.gl won't recognize it as a date.
 
 ![](./img/date_format.png){width="80%"}
 
@@ -127,31 +150,41 @@ Notice the time slider showing on the lower right corner.
 
 **Exercise**
 
-Now we know the mechanics of interactivity in Kepler.gl, let's show off! Pick whichever you want first, and have a go at the following maps:
+Now we know the mechanics of interactivity in Kepler.gl, let's show off!
+Pick whichever you want first, and have a go at the following maps:
 
-1.  An animation of global trade over time A map that lets you pick a given country and display its main routes
+1.  An animation of global trade over time A map that lets you pick a
+    given country and display its main routes
 
-2.  A map that lets you identify the vesel ID (id), date, and country of ships around Cape Town
+2.  A map that lets you identify the vesel ID (id), date, and country of
+    ships around Cape Town
 
 3.  A choropleth where you can select routes by their length in days
 
 4.  An animation of each route in the region around Jakarta
 
-5.  A map that allows you to select a single route, zoom into its origin, and then pan throughout the route
+5.  A map that allows you to select a single route, zoom into its
+    origin, and then pan throughout the route
 
 Once completed, select the one you like best, and post it on Teams.
 
 **Presentation**
 
--   You will then have 30 seconds to present your favorite map and hit the following points:
+-   You will then have 30 seconds to present your favorite map and hit
+    the following points:
 
--   What the map shows What interactivity element(s) you have used One thing you think is really effective about it
+-   What the map shows What interactivity element(s) you have used One
+    thing you think is really effective about it
 
 -   Remember, 30 seconds. Short and sweet. Make them count!
 
 ## References
 
--   Tamara Munzner's ["Visualization Analysis & Design"](https://www.cs.ubc.ca/~tmm/vadbook/). This lecture draws mostly on Chapter 1 (What's Vis, and Why Do It?).
--   Andy Kirk's ["Data Visualisation: a Handbook for Data Driven Design"](https://www.visualisingdata.com/book/).
+-   Tamara Munzner's ["Visualization Analysis &
+    Design"](https://www.cs.ubc.ca/~tmm/vadbook/). This lecture draws
+    mostly on Chapter 1 (What's Vis, and Why Do It?).
+-   Andy Kirk's ["Data Visualisation: a Handbook for Data Driven
+    Design"](https://www.visualisingdata.com/book/).
 -   [Mapbox's Guide to Map Design](https://www.mapbox.com/designers).
--   [Geo Temporal data visualisation](https://www.allthatgeo.com/tutorials-animated-geo-temporal-data-visualisation-kepler-gl/)
+-   [Geo Temporal data
+    visualisation](https://www.allthatgeo.com/tutorials-animated-geo-temporal-data-visualisation-kepler-gl/)
