--- a/labs/w01_Refresher.ipynb
+++ b/labs/w01_Refresher.ipynb
@@ -11,7 +11,7 @@
     "date: \"January 10th, 2024\"\n",
     "format: \n",
     "  html: \n",
-    "    code-fold: true\n",
+    "    code-fold: false\n",
     "---"
    ]
   },
