--- a/labs/w04_dataArch.ipynb
+++ b/labs/w04_dataArch.ipynb
@@ -62,13 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9a74b752",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopandas as gpd\n",
-    "import geojson"
+    "import geopandas as gpd"
    ]
   },
   {
@@ -389,7 +388,7 @@
    "id": "eff83c4d",
    "metadata": {},
    "source": [
-    "### 4.2.3 Visualizing in Python with `Folium`:"
+    "### 4.2.3 Visualizing the Tiles with `Folium`:"
    ]
   },
   {
