--- a/labs/w01_introduction.qmd
+++ b/labs/w01_introduction.qmd
@@ -1,36 +1,48 @@
-# Introduction
+---
+title: Static Maps
+author: Dani Arribas-Bel & Elisabetta Pietrostefani
+date: 'January 10th, 2024'
+format:
+  html:
+    code-fold: false
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
+      jupytext_version: 1.13.8
+  kernelspec:
+    display_name: Python 3 (ipykernel)
+    language: python
+    name: python3
+---
 
-Dani Arribas-Bel
+# 1. Part I: Powerful Web Mapping Examples
 
-**Lecture**: Introduction to the module
-
-**Lab**: Powerful examples & Discussion about interactive map
+- **Lecture**: Intrduction to the module
+- **Lab**: Powerful examples & Discussion about interactive map
 
 ## Lecture
-Slides can be downloaded
-["here"](/html/introduction_slides.html)
- 
-## Lab: Powerful examples
+Slides can be found [here](https://github.com/GDSL-UL/wma/raw/main/html/introduction_slides.html)
 
+## Lab: Powerful examples
 This lab has two main components:
 
 1.  The first one will require you to find a partner and work together with her/him
-
 2.  And the second one will involve group discussion.
 
 ### Paired activity
 
-In pairs, find three examples where web maps are used to communicate an idea. Complete the following sheet for each example:
+In pairs, find **three** examples where web maps are used to communicate an idea. Complete the following sheet for each example:
 
 -   **Substantive**
-
     -   `Title`: Title of the map/project
     -   `Author`: Who is behind the project?
     -   `Big idea`: a "one-liner" on what the project tries to accomplish --
     -   `Message`: what does the map try to get accross
 
 -   **Technical**
-
     -   `URL`:
     -   `Interactivity`: does the map let you interact with it in any way? Yes/No
     -   `Zoomable`: can you explore the map at different scales? Yes/No
@@ -40,30 +52,21 @@ In pairs, find three examples where web maps are used to communicate an idea. Co
 
 Post each sheet as a separate item on the Teams channel for Lab No.1
 
-As an example, below is the sheet for the project "WHO Coronavirus (COVID-19) Dashboard" !["WHO Coronavirus (COVID-19) Dashboard"](./img/who_covid.png)
+#### Example
+The project "WHO Coronavirus (COVID-19) Dashboard" !["WHO Coronavirus (COVID-19) Dashboard"](./img/who_covid.png)
 
 -   **Substantive**
-
     -   `Title`: WHO Coronavirus (COVID-19) Dashboard
-
     -   `Author`: World Health Organization
-
     -   `Big idea`: Shows confirmed COVID-19 cases and deaths by country to date
-
     -   `Message`: The project displays a map of the world where COVID-19 cases are shown by country. This element is used to show which countries have had more cases (large trends). A drop down button allows us to visualise the map by a) Total per 100,000 population b) % change in the last 7 days c) newly reported in the last 7 days d) newly reported in the last 24 hours.
 
 -   **Technical**
-
     -   `URL`: [`https://covid19.who.int/`](https://covid19.who.int/)
-
     -   `Interactivity`: Yes
-
     -   `Zoomable`: Yes
-
     -   `Tooltips`: Yes
-
     -   `Basemap`: No
-
     -   `Technology`: Unknown
 
 Here are a couple of other COVID-19 examples of web-maps that where basemaps and technology is easier to spot.
@@ -74,13 +77,9 @@ Here are a couple of other COVID-19 examples of web-maps that where basemaps and
 ### Class discussion
 
 We will select a few examples posted and collectively discuss (some of) the following questions:
-
 1.  What makes them powerful, what "speaks" to us?
-
 2.  What could be improved, what is counter-intuitive?
-
 3.  What design elements do they rely on?
-
 4.  What technology do they use?
 
 ## References
@@ -88,3 +87,4 @@ We will select a few examples posted and collectively discuss (some of) the foll
 -   For an excellent coverage of "visualisation literacy", Chapter 11 of Andy Kirk's ["Data Visualisation"](https://www.visualisingdata.com/book/) is a great start. Lab: Getting up to speed for web mapping
 -   A comprehensive overview of computational notebooks and how they relate to modern scientific work is available on [Ch.1 of the GDS book](https://geographicdata.science/book/notebooks/01_geo_thinking.html).
 -   A recent overview of notebooks in Geography is available in [Boeing & Arribas-Bel (2021)](https://gistbok.ucgis.org/bok-topics/gis-and-computational-notebooks)
+
