--- a/general/setUp.qmd
+++ b/general/setUp.qmd
@@ -5,7 +5,7 @@ Setting up the Python environment is necessary for:
 - Executing the [Jupyter Notebooks](https://docs.jupyter.org/en/latest/) of the Lab sessions of the course.
 - Preparing your own Jupyter Notebooks for the assignments (one each).
 
-## 1. Install Miniconda (and Python)
+## Install Miniconda (and Python)
 We will use `Minconda` to handle our working environment. *Miniconda is a free minimal installer for conda. It is a small bootstrap version of Anaconda that includes only conda, Python, the packages they both depend on, and a small number of other useful packages (like pip, zlib, and a few others)*
 
 1. Install Miniconda:
@@ -17,12 +17,12 @@ We will use `Minconda` to handle our working environment. *Miniconda is a free m
 
 **Alternatively**, you can work on the lab notebooks directly on the web. This does not require to install `Miniconda`. However, it represents a much slower option, especially when setting up the environment. To do so, you can access the data and the lab notebooks in the `\labs` directory from a virtual copy of the course repository [here](https://mybinder.org/v2/gh/GDSL-UL/wma/HEAD). If you opt for this session, you do not need to follow the rest of the instructions below.
 
-## 2. Set up the Miniconda Environment
+## Set up the Miniconda Environment
 1. Type in the search bar and find the `Anaconda Prompt (miniconda 3)`. Launch it, and write `conda update`.
 2. Download the [environment.yml](https://github.com/GDSL-UL/wma/blob/main/envs456.yml) whenever it's handy for you, write  `conda env create -n envs456 --file envs456.yml` in the prompt and press `Enter`; unless the `envs456.yml` file is located in the main directory that you see in the prompt, e.g. `C:\`, you need to specify the full directory of the file (including the file name).
 3. If you are prompted any questions, press `y`. This process will install all the packages necessary to carry out the lab sessions.
 
-## 3. Set up the Directories
+## Set up the Directories
 
 1. Create a folder where you want to keep your work conducted throughout this course. For example, call it `ENVS456`. You can save it wherever you want. If you are working on a university machine, it could be worth creating it in `M:/`, which should your "virtual" hard-disk.
 2. In `Miniconda` write `conda activate envs456` and press `Enter`. This activates your working environment.
@@ -30,7 +30,7 @@ We will use `Minconda` to handle our working environment. *Miniconda is a free m
 4. Open the file with a text editor (e.g. [Notepad++](https://notepad-plus-plus.org)), do a  `ctrl-f`  search for:  `c.ServerApp.root_dir`, uncomment it by removing the and change it to  `c.ServerApp.notebook_dir = 'C:\\your\\new\\path`, for example the directory where you created the `webmapping` folder. In the University Machines, it is advised to work on the directory `M:\`. 
 5. Save the file and close it.
 
-## 4. Prepare the Lab Data
+## Prepare the Lab Data
 1. Download the [data](https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/GDSL-UL/wma/tree/main/labs/data) and the [images](https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/GDSL-UL/wma/tree/main/labs/img) for running and rendering the jupyter notebooks. 
 2. Unzip the folders and move the nested folders into the folder `webmapping`.
 
