--- a/labs/w07_OSM.ipynb
+++ b/labs/w07_OSM.ipynb
@@ -20,7 +20,7 @@
     "tags": []
    },
    "source": [
-    "*Gabriele Filomena has readapted the parts of the Notebook from this [notebook](https://github.com/mszell/geospatialdatascience/blob/main/unit08_openstreetmap/lecture08.ipynb)*\n",
+    "*Gabriele Filomena has readapted parts of this [notebook](https://github.com/mszell/geospatialdatascience/blob/main/unit08_openstreetmap/lecture08.ipynb)* for preparing this notebook.\n",
     "Copyright (c) Michael Szell. Original sources include:\n",
     " \n",
     "* OSMnx examples: https://github.com/gboeing/osmnx-examples\n",
@@ -94,7 +94,8 @@
     "\n",
     "**Important**: <br>\n",
     "\n",
-    "Data downloaded from OSM are always in the WGS crs. You need to convert it for any type of spatial operation or computation to the appropriate coordinate reference system."
+    "Data downloaded from OSM are always in the WGS crs. You need to convert it for any type of spatial operation or computation to the appropriate coordinate reference system.\n",
+    "</div>"
    ]
   },
   {
@@ -796,7 +797,7 @@
     "\n",
     "Now, we have seen how to use some basic `osmnx` functions to obtain a graph representation of the street network. While this is simple and strightforward, I advise working on the street network represented as `geopandas.GeoDataFrame`s and `networkx` graphs. While at the beginning this may be more tedious, it also gives us much more control, both in terms of visualisation anad analysis depth. Before proceeding, it is important to keep in mind what type of graphs can be modelled through OSMNx and NetworkX, and what that means for the infrastructure we are modelling.\n",
     "\n",
-    "<img src=../img/graph_types.png/ width = 70%>\n",
+    "<img src=\"../img/graph_types.png\"  width=\"70%\">\n",
     "\n",
     "Have a look at NetworkX [documentation](https://networkx.org/documentation/stable/reference/classes/index.html) for details.\n",
     "\n",
@@ -1540,15 +1541,9 @@
     "\n",
     "Compute different shortest paths between a node (1) of your choice and a set of 20 other random nodes, for a ciclyst, a driver, and a walker. Visualise and compare the results. In order to differentiate the users, you are expected to consider their travelling speed, in relation to the speed limit of the edges. Consider that, at least for the driver, you may want to do that in a `MultiDiGraph`. \n",
     "\n",
-    "You can use as case-study the graph used for Siracsa, Italy or Sarajevo, Bosnia (see above)."
+    "You can use as case-study one of the graphs used above for Siracusa (Italy) or Sarajevo (Bosnia). Otherwise, just pick a city you like.\n",
+    "</div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
