--- a/labs/w03_webArch.ipynb
+++ b/labs/w03_webArch.ipynb
@@ -44,16 +44,16 @@
     "\n",
     "**Consider a simple Google search:**\n",
     "\n",
-    "<img src=../img/google.png/ width=\"70%\">\n",
+    "<img src=\"../img/google.png\" width=\"70%\">\n",
     "\n",
     "Ever wonder what all that extra stuff in the address bar was all about? In this case, the full address is Google's way of sending a query to its\n",
     "databases requesting information related to the search term *liverpool top attractions*.\n",
     "\n",
-    "<img src=../img/liv_attractions.png/ width=\"70%\">\n",
+    "<img src=\"../img/liv_attractions.png\" width=\"70%\">\n",
     "\n",
     "In fact, it looks like Google makes its query by taking the search terms, separating each of them with a **+**, and appending them to the link <https://www.google.com/#q=>. Therefore, we should be able to actually change our Google search by adding some terms to the URL:\n",
     "\n",
-    "<img src=../img/beatles.png/ width=\"70%\">\n",
+    "<img src=\"../img/beatles.png\" width=\"70%\">\n",
     "\n",
     "Learning how to use RESTful APIs is all about learning how to format these URLs so that you can get the response you want.\n",
     "\n",
@@ -69,6 +69,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "48bd0366-5e5a-4d7b-bb72-137991ebf02c",
+   "metadata": {},
+   "source": [
+    "There are two ways to collect data through APIs in Python:\n",
+    "\n",
+    "* **Plug-n-play packages.** Many common APIs are available through user-written Python (or R) Packages. These packages offer functions that conveniently \"wrap\" API queries and format the response. These packages are usually much more convenient than writing our own query, so it is worth searching for a package that works with the API we need.\n",
+    "* **Writing our own API request.** If no wrapper function is available, web have to write our own API request and format the response ourselves using Python. This is tricky, but definitely doable.\n",
+    "\n",
+    "## API Python libraries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7bdd3c7d-7867-4ab2-8fb3-968659112904",
    "metadata": {},
    "source": [
@@ -79,19 +92,6 @@
     "Some Python packages \"wrap\" API queries and format the response. Lucky us! In pairs, let's have a look at [`census`](https://github.com/datamade/census/tree/master), a wrapper or the United States Census Bureau's API You can also have a look at the different APIs available from the [United States Census Bureau](https://www.census.gov/data/developers.html).\n",
     "\n",
     "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "48bd0366-5e5a-4d7b-bb72-137991ebf02c",
-   "metadata": {},
-   "source": [
-    "### API Python libraries\n",
-    "\n",
-    "There are two ways to collect data through APIs in Python:\n",
-    "\n",
-    "* **Plug-n-play packages.** Many common APIs are available through user-written Python (or R) Packages. These packages offer functions that conveniently \"wrap\" API queries and format the response. These packages are usually much more convenient than writing our own query, so it is worth searching for a package that works with the API we need.\n",
-    "* **Writing our own API request.** If no wrapper function is available, web have to write our own API request and format the response ourselves using Python. This is tricky, but definitely doable."
    ]
   },
   {
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_api_key = \"6b9d8c8c152a25a3c1c8cf8f0ebe7f46b1d87736\" # Replace 'YOUR_CENSUS_API_KEY_HERE' with your actual Census API key."
+    "census_api_key = \"\" # Replace 'YOUR_CENSUS_API_KEY_HERE' with your actual Census API key."
    ]
   },
   {
@@ -748,7 +748,7 @@
    "id": "641c8dc2-4ead-45ba-8ebb-995381e1bece",
    "metadata": {},
    "source": [
-    "### Your own API request demo\n",
+    "## Your own API request demo\n",
     "\n",
     "The Python libraries commonly used for API requests are `requests` and `json`.\n",
     "\n",
@@ -1046,7 +1046,7 @@
    "id": "a6554719-4520-4054-a8c9-daf4398fd7ae",
    "metadata": {},
    "source": [
-    "### Geocoding API\n",
+    "## Geocoding API\n",
     "\n",
     "Below is a short exploration of a the `geocoder` provided by the library `geopy`. The `geocoder` relies on various external geocoding services. When using `Nominatim`, it accesses data from OpenStreetMap. OpenStreetMap's data includes a vast array of geographical information sourced from contributors globally. This includes street addresses, points of interest, and other location-based data. When you provide an address to the Nominatim geocoder, it queries OpenStreetMap's databases to find the corresponding geographical coordinates.\n",
     "\n",
@@ -1218,7 +1218,7 @@
    "id": "50573b60-ae04-4914-aa87-dcc6a2f63126",
    "metadata": {},
    "source": [
-    "### *Group activity answers*\n",
+    "## *Group activity answers*\n",
     "\n",
     "1.  Uniform Resource Location (`URL`) is a string of characters that, when interpreted via the Hypertext Transfer Protocol (`HTTP`). URLs point to a data resource, notably files written in Hypertext Markup Language (`HTML`) or a subset of a database.\n",
     "\n",
